# Geometry-Gated-Gravity

./: .gitattributes  CHANGELOG.md  FINAL_REPORT.md  INTEGRATE_3D_PDE_SOLVER.md  Makefile  QUARANTINE_NOTICE.md  README.md  SUCCESS_REPORT.md  WARP.md  analyze_actual_predictions.py  analyze_optimized_comprehensive.py  analyze_with_working_solver.py  baryon_primitives.py  check_results.py  cluster_lensing_diagnostic.py  convert_gaia_to_mw.py  debug_solver_output.py  display_results.py  fix_solver_5_ways.py  g3_alternatives_optimizer.py  g3_alternatives_test.py  g3_mw_gpu_eval.py  g3_optimization_results.md  g3_pde_full_analysis.py  g3_sigma_final.py  g3_sigma_final_results.json  g3_sigma_production.py  g3_sigma_sparc_results.csv  g3_solver_wrapper.py  gating.py  generate_mw_test_data.py  gravity_qt_app.py  mw_g3_gpu_opt.py  optimize_for_real_accuracy.py  optimize_g3_all_datasets.py  optimize_g3_pde_correct.py  paper.md  paper_additions_universal_g3.md  prepare_gaia_npz.py  requirements.txt  (+26 more)
rigor/: README.md  pyproject.toml  requirements.txt
rigor/rigor/: __init__.py  __main__.py  auto_search.py  baselines.py  compare_baselines.py  cupy_fit.py  cupy_utils.py  cv.py  data.py  fit_joint_mw.py  fit_sparc.py  formula_search.py  inference_numpyro.py  inference_numpyro_basis.py  metrics.py  mw.py  plot_cli.py  plotting.py  utils.py  xi.py
rigor/scripts/: README_cmb_envelopes.md  accept_build_cluster_profiles.py  add_models_and_tests.py  breakdown_by_type.py  breakdown_under_over.py  build_bcg_profile.py  build_from_sparc_mrt.py  build_pred_from_parquet.py  cmb_static_expts.py  (+31 more)
(+1594 files in other folders)
