
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rigor-rc"
version = "0.1.0"
description = "Hierarchical Bayesian rotation-curve fitting (SPARC + Milky Way) with xi(R, Sigma) families"
authors = [{name="Cedar Assistant", email="noreply@example.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pyarrow>=12.0",
    "matplotlib>=3.7",
    "numpyro>=0.14",
    "arviz>=0.16"
]

[tool.setuptools.packages.find]
where = ["rigor"]
namespaces = false
